# MAQAO

./: CMakeLists.txt  LGPL3.0  LICENSE  README  cqa.md  index.html  index.md  license-file.md  license.md  lprof.md  oneview.md  team.md
docs/: index.html  (+1 more)
src/: CMakeLists.txt  arch.h  config.h.in  maqaoerrs.c  maqaoerrs.h  version.h.in
src/LuaJIT/: CMakeLists.txt
src/LuaJIT/src/: Makefile  lj_arch.h
src/analyze/: CMakeLists.txt  lcore_blocks.c  lcore_cc.c  lcore_dataflow.c  lcore_ddg.c  lcore_dom.c  lcore_extract_fct_from_cc.c  lcore_flow.c  lcore_grouping.c  lcore_grouping_extends.c  lcore_indirectbranch.c  lcore_induction.c  lcore_live_registers.c  lcore_loop.c  lcore_loop_pattern.c  lcore_memory_debug.c  lcore_mtl.c  lcore_path.c  lcore_polytope.c  lcore_print.c  lcore_ssa.c  lcore_stack.c  libmcore.h
src/analyze/arm64/: arm64_DDG.c  arm64_live_registers.c
src/asm/: CMakeLists.txt  la_arch.c  la_asmfile.c  la_binfile.c  la_block.c  la_data.c  la_demangle.cpp  la_fct.c  la_groups.c  la_insn.c  la_interval.c  la_label.c  la_loop.c  la_oprnd.c  la_project.c  libmasm.h
src/asm/arm64/: CMakeLists.txt  arm64_arch.c  arm64_arch.h  arm64_archmacros.h  arm64_ext.c  arm64_ext.h  arm64_implicit_reg.c  arm64_uarch.c  arm64_uarch.h
src/common/: CMakeLists.txt  lc_array.c  lc_bitvector.c  lc_file.c  lc_graph.c  lc_hashtable.c  lc_help.c  lc_list.c  lc_memory.c  lc_platform.c  lc_queue.c  lc_string.c  lc_tree.c  lc_txtfile.c  libb64.c  libmcommon.h
src/lua-5.1.5/: CMakeLists.txt
src/lua-5.1.5/etc/: luavs.bat
src/lua-5.1.5/src/: CMakeLists.txt
src/madras/: CMakeLists.txt  archinterface.c  archinterface.h  bfile_fmtinterface.c  bfile_fmtinterface.h  libmadras.c  libmadras.h  pestruct.h  supportedarchs.h
src/madras/asmbl/: CMakeLists.txt  asmb_archinterface.c  asmb_archinterface.h  asmb_archspecific.h  asmb_supportedarchs.h  asmblutils.c  asmblutils.h  assembler.c  assembler.h
src/madras/asmbl/arm64/: CMakeLists.txt  arm64_assembler.c  arm64_assembler.h  arm64_revfct.h  arm64_revfct_0.c  arm64_revfct_1.c  arm64_revfct_2.c  arm64_revfct_3.c  arm64_revfct_4.c  arm64_revfct_5.c  arm64_revfct_6.c  arm64_revfct_7.c  arm64_revfct_8.c  arm64_revfct_9.c  arm64_revfct_a.c  arm64_revfct_b.c  arm64_revfct_c.c  arm64_revfct_d.c  arm64_revfct_e.c  arm64_revfct_f.c  arm64_revmacros.c  arm64_revmacros.h
src/madras/disass/: CMakeLists.txt  dsmb_archinterface.c  dsmb_archinterface.h  dsmb_archspecific.h  dsmb_supportedarchs.h  fsmutils.c  fsmutils.h  libmdisass.c  libmdisass.h
src/madras/disass/arm64/: CMakeLists.txt  arm64_fct.h  arm64_fct_0.c  arm64_fct_1.c  arm64_fct_2.c  arm64_fct_3.c  arm64_fct_4.c  arm64_fct_5.c  arm64_fct_6.c  arm64_fct_7.c  arm64_fct_8.c  arm64_fct_9.c  arm64_fct_a.c  arm64_fct_b.c  arm64_fct_c.c  arm64_fct_d.c  arm64_fct_e.c  arm64_fct_f.c  arm64_fsm.c  arm64_macros.c  arm64_macros.h  arm64_sym.h
src/madras/exe/: CMakeLists.txt  README  madras.c  madras_coff.h  madras_help.c
src/madras/exe/arm64/: CMakeLists.txt  arm64_finalfct.h  arm64_macrofinal.h
src/madras/libdbg/: CMakeLists.txt  DwarfLight.c  DwarfLight.h  libmdbg.c  libmdbg.h
src/madras/libdbg/libdwarf/: CMakeLists.txt  HOW_TO_UPDATE_ME  config.h.in.cmake  configure.cmake  libdwarf.h.in
src/madras/libstone/: CMakeLists.txt  libstone.c  libstone.h
src/madras/libtroll/: CMakeLists.txt  ar.h  elf.h  elfprinter.c  libelf.c  libelf.h.cmake  libmtroll.c  libmtroll.h
src/madras/libworm/: CMakeLists.txt  libmworm.c  libmworm.h
src/madras/libworm/includes/: CMakeLists.txt  fat.h  loader.h  machine.h  nlist.h  stab.h  vm_prot.h
src/madras/patch/: CMakeLists.txt  libmpatch.c  libmpatch.h  patch_archinterface.c  patch_archinterface.h  patch_supportedarchs.h  patchutils.c  patchutils.h
src/madras/patch/arm64/: CMakeLists.txt  arm64_patcher.c  arm64_patcher.h
src/maqao/: CMakeLists.txt  cst_C2Lua.lua.in  errs2Lua.lua.in  libextends.h  libmmaqao.c  libmmaqao.h  linit.c  load_images.lua.in  lua_exec.c  lua_exec.h  lua_static.lua.in  maqao.c  modules_wrapper.c  uarch_detector.c  uarch_detector.h
src/maqao/arm64/: CMakeLists.txt  arm64_extensions.h  arm64_finalfct.c  arm64_macrofinal.h  arm64_uarch_detector.c  arm64_uarch_detector.h
src/plugins/: CMakeLists.txt  main.lua
src/plugins/analyze/: analyze.lua  list_functions.lua  list_instructions.lua  list_loops.lua
src/plugins/built_in/: CMakeLists.txt  abstract_objects.lua.in  classes.lua.in
src/plugins/built_in/abstract_objects/: CMakeLists.txt  arch.lua.in  asmfile.lua.in  block.lua.in  fct.lua.in  group.lua.in  insn.lua.in  loop.lua.in  patcher.lua.in  project.lua.in  tools.lua.in
src/plugins/built_in/bitops/: CMakeLists.txt  bitops.c
src/plugins/built_in/classes/: Base64.lua  CMakeLists.txt  Consts.lua.in  Convert.lua  Debug.lua  Graph.lua  HTML.lua.in  Help.lua.in  List.lua  MDSAPI.lua.in  Math.lua  Message.lua  Queue.lua  SVG.lua  Stack.lua  Stream.lua  String.lua  TEXT.lua.in  Table.lua  TextOutput.lua  Tree.lua  Utils.lua.in  XLSX.lua.in
src/plugins/built_in/common/: CMakeLists.txt  common_c.c  common_list.c  common_queue.c
src/plugins/built_in/cross_compilation/: CMakeLists.txt
src/plugins/built_in/errcode/: CMakeLists.txt  common_errors.c
src/plugins/built_in/fcgx/: CMakeLists.txt  fcgx.c
src/plugins/built_in/fs/: CMakeLists.txt  fs.c
src/plugins/built_in/luafilesystem-1.7.0/: CMakeLists.txt
src/plugins/built_in/madras/: CMakeLists.txt  madras.c  madras.luadoc
src/plugins/cqa/: README  alias  api.lua  consts.lua  cqa.lua  help.lua
src/plugins/cqa/api/: README  can_be_analyzed.lua  cqa_results.lua  csv.lua  data_struct.lua  innermost_loops.lua  memory.lua  metrics.lua  mod.lua  reports.lua  reports_shared.lua  src_loop_grouping.lua  stream.lua  unroll.lua
src/plugins/cqa/output/: csv.lua  html.lua  html_aux.lua  json.lua  txt.lua  txt_html_shared.lua
src/plugins/disass/: calls.lua  disass.lua  help.lua  pp_html.lua  pp_shell.lua  pp_xml.lua  registers.lua  traverse.lua  util.lua
src/plugins/lprof/: CMakeLists.txt  api.lua  collect.lua  consts.lua  display.lua  help.lua  lprof.lua  strings.lua  utils.lua
(+182 files in other folders)
